# hackathon_2026

./: .gitignore  CLAUDE.md  Cathay_AI_Hackathon_端到端範例.md  README.md  actor.txt  orchestrator.py  qa_critic.txt  security_critic.txt  spec.txt
agentic-loop/: PLAN.md  README.md  constitution.md  mock_codex.py  orchestrator.py  run_demo.py  sample_taiga_to_dev.json  sample_taiga_webhook.json
agentic-loop/connectors/: github_pr.py  slack_notify.py  taiga_board.py  taiga_webhook.py
agentic-loop/demo_bankapp/: store.py  transfers.py
agentic-loop/demo_bankapp/tests/: test_transfer_limit.py
agentic-loop/prompts/: actor.txt  qa_critic.txt  security_critic.txt  spec.txt
docs/proposal/: Entry-proposal-v2.html
docs/superpowers/plans/: 2026-07-09-loop-hub-build-plan.md
loopHub/: .gitignore  README.md  RUNBOOK-NEW-MACHINE.md  SETUP.md  config.toml  pyproject.toml  repos.toml
loopHub/hub/: __main__.py  app.py  config.py  events.py  loop_runner.py  queue.py  security.py  slack.py  spec_agent.py  taiga.py  transitions.py  workers.py
loopHub/runs/20260709T084528-c14875/: spec.md
loopHub/runs/20260709T085119-13e3a0/: spec.md
loopHub/runs/20260709T085727-9d3c60/: spec.md
loopHub/runs/20260710T023830-bd2c6e/: spec.md
loopHub/runs/20260710T032634-1ff4ef/: spec.md
loopHub/scripts/: m1_board_setup.py  m3_connector_check.py
loopHub/skills/prompts/: spec_drafter.txt
loopHub/tests/: test_m2_skeleton.py  test_m4_spec_agent.py  test_m5_transitions.py  test_slack.py
taiga-backup/: DEMO-CREDENTIALS.md  loophub.env  taiga-db.sql  taiga-docker.env
(+2 files in other folders)
